--- a/RazorCrudDemo-FACIT/appsettings.json
+++ b/RazorCrudDemo-FACIT/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=RazorCrudDemoDb;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
